--- a/css/styles.css
+++ b/css/styles.css
@@ -25,24 +25,55 @@ body {
   font-size: 14px;
   letter-spacing: 0.03em;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+img {
+  display: block;
+}
+button {
+  font-family: inherit;
+  cursor: pointer;
+}
+.container {
+  width: 1235px;
+  padding-left: 15px;
+  padding-right: 15px;
+  justify-content: center;
+}
 
 .logo {
   color: var(--accent-color);
   font-family: Raleway, cursive;
-
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   text-decoration: none;
+  padding-left: 35px;
 }
 
 .page-studio {
   color: var(--studio-word-color);
 }
-
+.page-header {
+  height: 80px;
+}
 .list {
   list-style: none;
+  margin: 0;
+}
+.main-nav {
+  display: flex;
+  align-items: center;
 }
 
 /* Site-nav */
@@ -63,39 +94,64 @@ body {
 .site-nav .link.current {
   color: var(--accent-color);
 }
+.site-nav {
+  display: flex;
+  margin-left: 93px;
+  padding: 32px 0;
+}
+.site-nav .item {
+  margin-right: 50px;
+}
+.site-nav .item:last-child {
+  margin-right: 0;
+}
 
 /* Site-info */
 
-.site-info .link {
-  color: var(--primary-text-color);
-
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  text-decoration: none;
+  .site-info .link {
+    color: var(--primary-text-color);
+  
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+  }
+  
+  .site-info .link:hover,
+  .site-info .link:focus {
+    color: var(--accent-color);
+  }
+  
+.site-info {
+  display: flex;
+  margin-left: auto;
 }
-
-.site-info .link:hover,
-.site-info .link:focus {
-  color: var(--accent-color);
+.site-info li {
+  margin-right: 50px;
 }
-
+.site-info li:last-child {
+  margin-right: 0;
+}
 /* Hero  */
 
 .hero {
   background-color: var(--background-titles-color);
+  text-align: center;
+  width: 1600px;
+  height: 600px;
 }
 
 .hero-title {
+  margin-bottom: 30px;
   color: #ffffff;
 
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  padding-top: 200px;
 }
 
 .hero-title-1 .link:hover,
@@ -105,13 +161,16 @@ body {
 }
 /* Feature-list */
 
-
+.fuature-list {
+  display: flex;
+  padding-top: 94px;
+  justify-content: center;
+}
 .section-title .fuature {
   color: var(--title-text-color);
 }
 .fuature-list .title {
   color: var(--title-text-color);
-
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -121,24 +180,38 @@ body {
 
 .fuature-list .text {
   color: var(--primary-text-color);
-
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
 
-
 /* Examples */
+
 .examples {
   color: var(--title-text-color);
+  display: flex;
+  justify-content: center;
+  padding-bottom: 94px;
 }
 .section-title {
+  margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
+  padding-top: 118px;
 }
+.title {
+  margin-bottom: 10px;
+}
+.examples li {
+  margin-right: 30px;
+}
+.examples li:last-child {
+  margin-right: 0;
+}
+
 /* Team */
 .section-2 {
   background-color: var(--background-secondary-color);
@@ -146,7 +219,24 @@ body {
 .visually-hidden {
   font-size: 0;
 }
+.team {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 94px;
+}
+.list-team {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 0px 0px 4px 4px;
+}
+.team li {
+  margin-right: 30px;
+}
+.team li:last-child {
+  margin-right: 0;
+}
 .team-title {
+  padding-top: 94px;
+  margin-bottom: 50px;
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 36px;
@@ -156,6 +246,7 @@ body {
 }
 
 .title-h {
+  margin-bottom: 10px;
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
@@ -170,9 +261,22 @@ body {
   line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
+  padding-bottom: 30px;
+}
+.img {
+  margin-bottom: 30px;
 }
 /* Footer */
 
+.logo-footer {
+  color: var(--accent-color);
+  font-family: Raleway, cursive;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+}
 .footer .link-map:hover,
 .footer .link-map:focus {
   color: var(--accent-color);
@@ -181,12 +285,15 @@ body {
 .footer .link:focus {
   color: var(--accent-color);
 }
-
+.footer {
+  height: 252px;
+  margin-top: 0;
+}
 .footer-bck {
   background-color: var(--background-titles-color);
 }
 
-.footer, .link-map {
+.link-map {
   color: var(--background-main-color);
   font-family: 'Roboto';
   font-style: normal;
@@ -195,9 +302,10 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   text-decoration: none;
+  padding-bottom: 9px;
 }
 
-.footer, .link {
+.link {
   color: var(--footer-text-color);
   font-family: 'Roboto';
   font-style: normal;
@@ -206,13 +314,20 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   text-decoration: none;
+  padding-bottom: 9px;
 }
-
+.logo-footer {
+  display: block;
+  margin-bottom: 20px;
+  padding-top: 60px; 
+  padding-left: 35px;
+}
 .page-studio-white {
   color: var(--background-main-color);
 }
 /* Button */
 .button {
+  padding: 10px 32px;
   color: var(--background-main-color);
   background-color: var(--accent-color);
   font-weight: 700;
@@ -221,22 +336,31 @@ body {
   letter-spacing: 0.06em;
   font-family: inherit;
   cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
 
-
 /* Portfolio */
-
+.list-table {
+  list-style: none;
+}
+.list-table li {
+  margin-right: 8px;
+}
+.list-table li:last-child {
+  margin-right: 0;
+}
 .button-p {
   color: var(--title-text-color);
   background-color: var(--background-secondary-color);
-
+  border-radius: 4px;
+  padding: 6px 22px;
+  border: none;
+  text-align: center;
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.62;
-  text-align: center;
+  line-height: 1.6;
   letter-spacing: 0.03em;
-  font-family: inherit;
-  cursor: pointer;
 }
 
 .title-g {
@@ -253,4 +377,13 @@ body {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
+}
+.list-table {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  gap: 30px;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 94px;
 }
