--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
 /* цвет текста контактов в футере rgba(255, 255, 255, 0.6) */
 
 :root {
+  --header-border:#ECECEC;
   --accent-color: #2196f3;
   --title-text-color: #212121;
   --primary-text-color: #757575;
@@ -15,6 +16,7 @@
   --background-secondary-color: #f5f4fa;
   --background-titles-color: #2f303a;
   --studio-word-color: #000000;
+  --button-active: #188ce8;
   --footer-text-color: rgba(255, 255, 255, 0.6);
 }
 
@@ -66,6 +68,7 @@ button {
 }
 .page-header {
   height: 80px;
+  border-bottom: 1px solid var(--header-border);
 }
 .list {
   list-style: none;
@@ -86,12 +89,14 @@ button {
   letter-spacing: 0.02em;
   text-decoration: none;
 }
-.site-nav .link:hover,
-.site-nav .link:focus {
-  color: var(--accent-color);
+.site-nav .item, .link:hover,
+.site-nav .item, .link:focus
+ {
+ color: var(--accent-color);
+  
 }
 
-.site-nav .link.current {
+.site-nav .item .link.current{
   color: var(--accent-color);
 }
 .site-nav {
@@ -158,6 +163,11 @@ button {
 .hero-title-1 .link:focus {
   color: var(--background-main-color);
   background-color: var(--accent-color);
+}
+.button:hover,
+.button:focus {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  background-color: var(--button-active);
 }
 /* Feature-list */
 
@@ -362,7 +372,11 @@ button {
   line-height: 1.6;
   letter-spacing: 0.03em;
 }
-
+.button-p:hover,
+.button-p:focus {
+  color: var(--background-secondary-color);
+  background-color: var(--accent-color);
+}
 .title-g {
   color: var(--title-text-color);
   font-weight: 700;
